tests/paczka1/small_fuzzy/79863169.err
Error in line 1: Mhj S302 23,4
Error in line 3: Mhj A720 61,4
Error in line 12: Mhj A21 33,5
